--- a/PositionIn/Views/PostCells/PositionIn.PostBodyCell.xib
+++ b/PositionIn/Views/PostCells/PositionIn.PostBodyCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9532" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
@@ -44,6 +44,7 @@
             </tableViewCellContentView>
             <connections>
                 <outlet property="contentLabel" destination="uhr-ln-YYb" id="0gR-IR-dX3"/>
+                <outlet property="leftMarginConstaint" destination="z80-N2-i2o" id="ZYd-mC-7j1"/>
             </connections>
             <point key="canvasLocation" x="446" y="216"/>
         </tableViewCell>
