--- a/PositionIn/BoughtProductDetails/PositionIn.BoughtProductDetailsViewController.xib
+++ b/PositionIn/BoughtProductDetails/PositionIn.BoughtProductDetailsViewController.xib
@@ -11,6 +11,7 @@
                 <outlet property="orderStatusLabel" destination="zwI-Yu-9R4" id="QRp-Gu-XrZ"/>
                 <outlet property="paymentDateLabel" destination="BuX-gm-GHF" id="2HI-Pl-Ufi"/>
                 <outlet property="paymentMethodLabel" destination="RPP-Nv-Eem" id="bla-VO-wsl"/>
+                <outlet property="pickUpAvaiabililityCellHeightConstraints" destination="skB-Ts-A1Z" id="8J6-MH-4aq"/>
                 <outlet property="pickUpAvailabilityLabel" destination="zqa-dk-vMy" id="n0Y-ks-NU8"/>
                 <outlet property="productImage" destination="P2g-N2-wfU" id="y9f-ak-XTn"/>
                 <outlet property="productNameLabel" destination="FoI-NO-f4L" id="U8T-b7-3B2"/>
