--- a/PositionIn/PositionIn.MarketDetailsViewController.xib
+++ b/PositionIn/PositionIn.MarketDetailsViewController.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9532" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
     </dependencies>
     <objects>
@@ -12,7 +12,6 @@
                 <outlet property="detailsLabel" destination="ucO-Wg-k6s" id="06o-6a-t6b"/>
                 <outlet property="headerLabel" destination="eae-BK-JFW" id="zPL-t5-KgY"/>
                 <outlet property="infoLabel" destination="HXh-sw-ZiT" id="Z2r-lt-KOI"/>
-                <outlet property="nameLabel" destination="auo-sU-iGl" id="w95-VX-Hwi"/>
                 <outlet property="pinDistanceImageView" destination="6rD-Gn-TxT" id="A9Y-2p-jPT"/>
                 <outlet property="priceLabel" destination="2Xi-ku-6wR" id="ama-uf-EOJ"/>
                 <outlet property="productImageView" destination="CV8-ai-ImP" id="BAU-Dh-Njl"/>
@@ -36,7 +35,7 @@
                         <view alpha="0.64999997615814209" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="waK-Se-5bD">
                             <rect key="frame" x="0.0" y="252" width="600" height="48"/>
                             <subviews>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$99" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2Xi-ku-6wR">
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="$99" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2Xi-ku-6wR">
                                     <rect key="frame" x="10" y="14" width="31" height="21"/>
                                     <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="18"/>
                                     <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -45,21 +44,9 @@
                                         <userDefinedRuntimeAttribute type="string" keyPath="text" value=""/>
                                     </userDefinedRuntimeAttributes>
                                 </label>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Edward Ryan" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="auo-sU-iGl">
-                                    <rect key="frame" x="498" y="15" width="92" height="18"/>
-                                    <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="15"/>
-                                    <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
-                                    <nil key="highlightedColor"/>
-                                    <userDefinedRuntimeAttributes>
-                                        <userDefinedRuntimeAttribute type="string" keyPath="text" value=""/>
-                                    </userDefinedRuntimeAttributes>
-                                </label>
                             </subviews>
                             <color key="backgroundColor" red="0.14901960780000001" green="0.14901960780000001" blue="0.14901960780000001" alpha="1" colorSpace="calibratedRGB"/>
                             <constraints>
-                                <constraint firstAttribute="trailing" secondItem="auo-sU-iGl" secondAttribute="trailing" constant="10" id="5He-hY-s1C"/>
-                                <constraint firstItem="2Xi-ku-6wR" firstAttribute="centerY" secondItem="auo-sU-iGl" secondAttribute="centerY" id="5pN-Gs-neD"/>
-                                <constraint firstAttribute="centerY" secondItem="auo-sU-iGl" secondAttribute="centerY" id="73y-9N-8v5"/>
                                 <constraint firstItem="2Xi-ku-6wR" firstAttribute="leading" secondItem="waK-Se-5bD" secondAttribute="leading" constant="10" id="MIb-wr-EXx"/>
                                 <constraint firstAttribute="height" constant="48" id="hrO-lq-Sex"/>
                             </constraints>
