--- a/PositionIn/Classes/Application Layer/Stories/AmbulanceMembership/Interface/Payment/AmbulancePaymentTableViewCell.xib
+++ b/PositionIn/Classes/Application Layer/Stories/AmbulanceMembership/Interface/Payment/AmbulancePaymentTableViewCell.xib
@@ -8,7 +8,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="AmbulancePaymentTableViewCell" customModule="PositionIn" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" id="KGk-i7-Jjw" customClass="AmbulancePaymentTableViewCell" customModule="PositionIn" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="478" height="122"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -96,12 +96,12 @@
                         <variation key="default">
                             <mask key="constraints">
                                 <exclude reference="qFG-15-Yli"/>
-                                <exclude reference="9u3-C1-BbL"/>
                                 <exclude reference="8CM-ni-Ykq"/>
+                                <exclude reference="9u3-C1-BbL"/>
                                 <exclude reference="gOa-4L-e0I"/>
-                                <exclude reference="b2I-DT-A31"/>
-                                <exclude reference="JDO-kZ-Qd0"/>
                                 <exclude reference="9f1-JG-nIr"/>
+                                <exclude reference="JDO-kZ-Qd0"/>
+                                <exclude reference="b2I-DT-A31"/>
                                 <exclude reference="p8Z-BJ-cCj"/>
                             </mask>
                         </variation>
