--- a/PositionIn/EPlusAmbulanceController/EPlusTableViewHeaderView/EPlusTableViewHeaderView.xib
+++ b/PositionIn/EPlusAmbulanceController/EPlusTableViewHeaderView/EPlusTableViewHeaderView.xib
@@ -25,9 +25,12 @@
                         </mask>
                     </variation>
                 </label>
-                <view contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Z7r-zx-dIp">
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Z7r-zx-dIp">
                     <rect key="frame" x="0.0" y="64" width="600" height="1"/>
                     <color key="backgroundColor" red="0.9137254901960784" green="0.9137254901960784" blue="0.9137254901960784" alpha="1" colorSpace="calibratedRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="1" id="u6q-Vf-z7d"/>
+                    </constraints>
                 </view>
             </subviews>
             <color key="backgroundColor" red="0.96470588235294119" green="0.96470588235294119" blue="0.96470588235294119" alpha="1" colorSpace="calibratedRGB"/>
