--- a/PositionIn/Classes/Application Layer/Stories/EplusMembership/Interface/EplusMemberCard/EplusMemberCardView/EplusMemberCardView.xib
+++ b/PositionIn/Classes/Application Layer/Stories/EplusMembership/Interface/EplusMemberCard/EplusMemberCardView/EplusMemberCardView.xib
@@ -7,15 +7,15 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="EplusMemberCardView" customModule="PositionIn" customModuleProvider="target">
             <connections>
-                <outlet property="backgroundImageView" destination="bnm-f1-MJp" id="PrX-T0-KTp"/>
-                <outlet property="cardIdLabel" destination="a1p-eF-B8G" id="nhf-qF-Dv1"/>
-                <outlet property="expirationDateLabel" destination="UwM-8k-tMI" id="XRK-67-CsU"/>
-                <outlet property="expirationDateTitleLabel" destination="tzF-PA-ag2" id="RR8-3l-Rfr"/>
-                <outlet property="firstNameLabel" destination="N6e-zJ-Jc5" id="cAB-oL-GNs"/>
-                <outlet property="lastNameLabel" destination="KnM-8W-265" id="1O7-ak-YIa"/>
-                <outlet property="planNameLabel" destination="QNB-XR-VFV" id="BXl-VC-Ekt"/>
-                <outlet property="priceLabel" destination="iZV-ty-Ywf" id="eEN-hE-JyC"/>
-                <outlet property="profileImageView" destination="8Gg-LA-2gA" id="TR2-Gc-e3v"/>
+                <outlet property="backgroundImageView" destination="bnm-f1-MJp" id="t4E-7V-r4P"/>
+                <outlet property="cardIdLabel" destination="a1p-eF-B8G" id="heb-Gt-YrV"/>
+                <outlet property="expirationDateLabel" destination="UwM-8k-tMI" id="IfY-En-TtC"/>
+                <outlet property="expirationDateTitleLabel" destination="tzF-PA-ag2" id="Mni-Qu-l8W"/>
+                <outlet property="firstNameLabel" destination="N6e-zJ-Jc5" id="xhH-gq-gVX"/>
+                <outlet property="lastNameLabel" destination="KnM-8W-265" id="rg5-OH-7L9"/>
+                <outlet property="planNameLabel" destination="QNB-XR-VFV" id="uzG-3C-5Du"/>
+                <outlet property="priceLabel" destination="iZV-ty-Ywf" id="yT3-mC-a97"/>
+                <outlet property="profileImageView" destination="8Gg-LA-2gA" id="g9x-YJ-c8J"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -176,8 +176,9 @@
                     </variation>
                 </view>
             </subviews>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             <constraints>
+                <constraint firstItem="bnm-f1-MJp" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="LzX-2H-ybA"/>
                 <constraint firstItem="6Ms-ft-jjO" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="pwo-Dr-hxC"/>
                 <constraint firstItem="6Ms-ft-jjO" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="sgZ-BX-hLy"/>
             </constraints>
