--- a/PositionIn/FeedListViewController/FeedListViewController.xib
+++ b/PositionIn/FeedListViewController/FeedListViewController.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9532" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
@@ -31,6 +31,7 @@
                 <constraint firstItem="Bth-QV-uoi" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="lqg-Cm-0xe"/>
                 <constraint firstItem="Bth-QV-uoi" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="zAC-X0-OMO"/>
             </constraints>
+            <point key="canvasLocation" x="164" y="321"/>
         </view>
     </objects>
 </document>
