--- a/PositionIn/Classes/Application Layer/Stories/EplusMembership/Interface/EplusMemberCard/PositionIn.EPlusMemberCardViewController.xib
+++ b/PositionIn/Classes/Application Layer/Stories/EplusMembership/Interface/EplusMemberCard/PositionIn.EPlusMemberCardViewController.xib
@@ -5,7 +5,7 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="EplusMemberCardViewController">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="EPlusMemberCardViewController" customModule="PositionIn" customModuleProvider="target">
             <connections>
                 <outlet property="activityIndicator" destination="IhB-vX-9ki" id="oGg-ic-449"/>
                 <outlet property="detailsButton" destination="GgK-Us-YYA" id="un7-OM-4DF"/>
@@ -31,7 +31,7 @@
                                         <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="IhB-vX-9ki">
                                             <rect key="frame" x="289" y="132" width="20" height="20"/>
                                         </activityIndicatorView>
-                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="b9F-aw-ETS" customClass="EplusMemberCardView" customModule="PositionIn" customModuleProvider="target">
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="b9F-aw-ETS" customClass="EPlusMemberCardView" customModule="PositionIn" customModuleProvider="target">
                                             <rect key="frame" x="145" y="32" width="308" height="199"/>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                             <constraints>
