--- a/PositionIn/Classes/Application Layer/Stories/EplusMembership/Interface/EplusSIgnUpNowButton/EplusSIgnUpNowButton.xib
+++ b/PositionIn/Classes/Application Layer/Stories/EplusMembership/Interface/EplusSIgnUpNowButton/EplusSIgnUpNowButton.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9532" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9532" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
@@ -27,10 +27,10 @@
                     <rect key="frame" x="16" y="17" width="32" height="32"/>
                 </imageView>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="B4f-jp-4qj" userLabel="ContainerView">
-                    <rect key="frame" x="56" y="12" width="551" height="42"/>
+                    <rect key="frame" x="56" y="13" width="551" height="41"/>
                     <subviews>
                         <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="e2R-3C-CwF" userLabel="signUpNowContainer">
-                            <rect key="frame" x="0.0" y="0.0" width="551" height="42"/>
+                            <rect key="frame" x="0.0" y="0.0" width="551" height="41"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="For an E-plus rescue package" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4V5-FD-CW4">
                                     <rect key="frame" x="0.0" y="0.0" width="551" height="17"/>
@@ -57,7 +57,7 @@
                             </constraints>
                         </view>
                         <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WxU-VJ-Id3" userLabel="viewPlanContainer">
-                            <rect key="frame" x="0.0" y="0.0" width="551" height="42"/>
+                            <rect key="frame" x="0.0" y="0.0" width="551" height="41"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="VIEW YOUR E-PLUS PLAN" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sYq-V9-i3C" userLabel="VIEW YOUR E-PLUS PLAN">
                                     <rect key="frame" x="0.0" y="11" width="551" height="21"/>
@@ -86,22 +86,22 @@
                         <constraint firstAttribute="bottom" secondItem="e2R-3C-CwF" secondAttribute="bottom" id="pM2-RF-gmM"/>
                     </constraints>
                 </view>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="cgY-Do-JED">
-                    <rect key="frame" x="615" y="23" width="20" height="20"/>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="disclosureIindicator" translatesAutoresizingMaskIntoConstraints="NO" id="cgY-Do-JED">
+                    <rect key="frame" x="620" y="20" width="17" height="27"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="20" id="VEU-tf-42x"/>
-                        <constraint firstAttribute="width" constant="20" id="icQ-Ug-Ya4"/>
+                        <constraint firstAttribute="height" constant="27" id="VEU-tf-42x"/>
+                        <constraint firstAttribute="width" constant="17" id="icQ-Ug-Ya4"/>
                     </constraints>
                 </imageView>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstAttribute="bottom" secondItem="4Il-66-ucj" secondAttribute="bottom" id="1Ow-7g-3rg"/>
-                <constraint firstAttribute="trailing" secondItem="cgY-Do-JED" secondAttribute="trailing" constant="16" id="Akz-Xk-q4J"/>
+                <constraint firstAttribute="trailing" secondItem="cgY-Do-JED" secondAttribute="trailing" constant="14" id="Akz-Xk-q4J"/>
                 <constraint firstItem="B4f-jp-4qj" firstAttribute="leading" secondItem="4Il-66-ucj" secondAttribute="trailing" constant="8" id="CnF-jP-77p"/>
                 <constraint firstItem="B4f-jp-4qj" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="EJo-8B-GLb"/>
                 <constraint firstItem="4Il-66-ucj" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="16" id="Kod-NL-DVQ"/>
-                <constraint firstItem="cgY-Do-JED" firstAttribute="leading" secondItem="B4f-jp-4qj" secondAttribute="trailing" constant="8" id="NPt-uh-AkC"/>
+                <constraint firstItem="cgY-Do-JED" firstAttribute="leading" secondItem="B4f-jp-4qj" secondAttribute="trailing" constant="13" id="NPt-uh-AkC"/>
                 <constraint firstItem="4Il-66-ucj" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="T1A-qp-aTL"/>
                 <constraint firstItem="4Il-66-ucj" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="VMP-vp-5t3"/>
                 <constraint firstItem="jRZ-v7-xaL" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="YHA-JF-dRe"/>
@@ -121,6 +121,7 @@
         </view>
     </objects>
     <resources>
+        <image name="disclosureIindicator" width="17" height="27"/>
         <image name="eplus_icon" width="32" height="32"/>
     </resources>
 </document>
